# AI_Learning_backend

./: pyproject.toml
app/: add_books_minio.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: ai_textbook.py  subjects.py  user.py
app/core/: config.py  security.py
app/db/: minio.py  mongodb.py  redis.py
app/llm/: aitext_gemini.py  llm_config.py
app/models/: models.py
app/schemas/: ai_textbook_dto.py  user_dto.py
